--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     </head>
     <body>
         <img src="gerbtspu118.png">
-        <h1>Мой сайт</h1>
-        <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a></p>
+        <h1>Обо мне</h1>
+        <ul>
+            <li><p>Я учусь в <a href="https://www.tspu.edu.ru"> ТГПУ</a></p></li>
+            <li><p>Родился я в этом <a href=./Каргасок.html> посёлке</a></p></li>
+            <li><p>Мне нравится заниматься<a href= ./Пауэрлифтинг.html> пауэрлифтингом</a></p></li>
+            <li><p>Я люблю породу собак <a href= ./Стаффорд.html> стаффорд</a></p></li>
+        </ul>
     </body>
 </html>
